--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -53,11 +53,11 @@
                             </group>
                             <group>
                                 <field name="mrp_production_ids" readonly="1">
-                                    <tree create="0" edit="0" delete="0" default_order="date_planned_start desc">
+                                    <tree create="0" edit="0" delete="0" default_order="date_start desc">
                                         <field name="name"/>
                                         <field name="product_id"/>
                                         <field name="product_qty"/>
-                                        <field name="date_planned_start"/>
+                                        <field name="date_start"/>
                                         <field name="state"/>
                                     </tree>
                                 </field>
