--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -18,16 +18,81 @@
             <form string="Planning Batch">
                 <header>
                     <field name="status" widget="statusbar" statusbar_visible="draft,calculated,confirmed,done"/>
+                    <button name="action_open_select_sales_orders" type="object" string="Select Sales Orders"
+                            class="btn-primary" modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
+                    <button name="action_calculate" type="object" string="Calculate"
+                            modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
+                    <button name="action_create_mo" type="object" string="Create MO (Planner)"
+                            modifiers="{'invisible': [('status', '!=', 'calculated')]}"/>
                 </header>
                 <sheet>
                     <group>
                         <field name="name"/>
                         <field name="date"/>
+                        <field name="company_id"/>
                     </group>
                     <group>
                         <field name="note"/>
                     </group>
                     <notebook>
+                        <page string="Selection">
+                            <group>
+                                <field name="batch_order_ids" options="{'no_create': True}">
+                                    <tree create="0" edit="0" delete="1">
+                                        <field name="sale_order_id"/>
+                                        <field name="partner_id"/>
+                                        <field name="date_order"/>
+                                        <field name="state"/>
+                                        <field name="amount_total"/>
+                                    </tree>
+                                    <form string="Sales Order">
+                                        <group>
+                                            <field name="sale_order_id" readonly="1"/>
+                                            <field name="partner_id" readonly="1"/>
+                                            <field name="date_order" readonly="1"/>
+                                            <field name="state" readonly="1"/>
+                                            <field name="amount_total" readonly="1"/>
+                                        </group>
+                                        <group>
+                                            <field name="sale_order_line_ids">
+                                                <tree create="0" edit="0" delete="0">
+                                                    <field name="product_id"/>
+                                                    <field name="product_uom_qty"/>
+                                                    <field name="product_uom"/>
+                                                    <field name="price_subtotal"/>
+                                                </tree>
+                                            </field>
+                                        </group>
+                                    </form>
+                                </field>
+                            </group>
+                            <group>
+                                <field name="sale_order_line_ids" options="{'no_create': True}"
+                                       domain="[('order_id', 'in', sale_order_ids)]">
+                                    <tree create="0" edit="0" delete="1">
+                                        <field name="order_id"/>
+                                        <field name="product_id"/>
+                                        <field name="product_uom_qty"/>
+                                        <field name="product_uom"/>
+                                        <field name="price_subtotal"/>
+                                    </tree>
+                                </field>
+                            </group>
+                        </page>
+                        <page string="Batch Lines">
+                            <field name="line_ids">
+                                <tree create="0" edit="0" delete="0">
+                                    <field name="sale_order_id"/>
+                                    <field name="sale_order_line_id"/>
+                                    <field name="product_id"/>
+                                    <field name="product_uom_qty"/>
+                                    <field name="qty_product_uom"/>
+                                    <field name="status"/>
+                                    <field name="message"/>
+                                    <field name="mrp_production_id"/>
+                                </tree>
+                            </field>
+                        </page>
                         <page string="Workflow overview">
                             <group>
                                 <field name="sale_order_ids" readonly="1">
@@ -107,6 +172,31 @@
         <field name="name">Planning Batches</field>
         <field name="res_model">planning.batch</field>
         <field name="view_mode">tree,form</field>
+    </record>
+
+    <record id="view_planning_batch_select_so_form" model="ir.ui.view">
+        <field name="name">planning.batch.select.so.form</field>
+        <field name="model">planning.batch.select.so</field>
+        <field name="arch" type="xml">
+            <form string="Select Sales Orders">
+                <group>
+                    <field name="sale_order_ids" domain="[('state', '=', 'sale')]">
+                        <tree create="0" edit="0" delete="0" default_order="date_order desc">
+                            <field name="name"/>
+                            <field name="partner_id"/>
+                            <field name="date_order"/>
+                            <field name="amount_total"/>
+                            <field name="state"/>
+                        </tree>
+                    </field>
+                </group>
+                <footer>
+                    <button name="action_select_all" type="object" string="Select All" class="btn-secondary"/>
+                    <button name="action_apply" type="object" string="Load Sales Orders" class="btn-primary"/>
+                    <button string="Cancel" class="btn-secondary" special="cancel"/>
+                </footer>
+            </form>
+        </field>
     </record>
 
     <menuitem id="menu_fulfillment_planner_root" name="Fulfillment Planner" sequence="10"/>
