Fix wizard selection persistence and summary refresh

--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -54,36 +54,27 @@
                                             <field name="amount_total" readonly="1"/>
                                         </group>
                                         <group>
-                                            <field name="sale_order_line_ids">
-                                                <tree create="0" edit="0" delete="0">
+                                            <field name="batch_line_ids">
+                                                <tree create="0" edit="0" delete="1">
+                                                    <field name="selected"/>
                                                     <field name="product_id"/>
                                                     <field name="product_uom_qty"/>
                                                     <field name="product_uom"/>
-                                                    <field name="price_subtotal"/>
+                                                    <field name="status"/>
+                                                    <field name="message"/>
                                                 </tree>
                                             </field>
                                         </group>
                                     </form>
                                 </field>
                             </group>
-                            <group>
-                                <field name="sale_order_line_ids" options="{'no_create': True}"
-                                       domain="[('order_id', 'in', sale_order_ids)]">
-                                    <tree create="0" edit="0" delete="1">
-                                        <field name="order_id"/>
-                                        <field name="product_id"/>
-                                        <field name="product_uom_qty"/>
-                                        <field name="product_uom"/>
-                                        <field name="price_subtotal"/>
-                                    </tree>
-                                </field>
-                            </group>
                         </page>
                         <page string="Batch Lines">
                             <field name="line_ids">
-                                <tree create="0" edit="0" delete="0">
+                                <tree create="0" edit="0" delete="1">
                                     <field name="sale_order_id"/>
                                     <field name="sale_order_line_id"/>
+                                    <field name="selected"/>
                                     <field name="product_id"/>
                                     <field name="product_uom_qty"/>
                                     <field name="qty_product_uom"/>
@@ -106,13 +97,14 @@
                                 </field>
                             </group>
                             <group>
-                                <field name="sale_order_line_ids" readonly="1">
+                                <field name="line_ids" readonly="1">
                                     <tree create="0" edit="0" delete="0">
-                                        <field name="order_id"/>
+                                        <field name="sale_order_id"/>
                                         <field name="product_id"/>
                                         <field name="product_uom_qty"/>
                                         <field name="product_uom"/>
-                                        <field name="price_subtotal"/>
+                                        <field name="status"/>
+                                        <field name="message"/>
                                     </tree>
                                 </field>
                             </group>
@@ -180,18 +172,48 @@
         <field name="arch" type="xml">
             <form string="Select Sales Orders">
                 <group>
-                    <field name="sale_order_ids" domain="[('state', '=', 'sale')]">
-                        <tree create="0" edit="0" delete="0" default_order="date_order desc">
-                            <field name="name"/>
-                            <field name="partner_id"/>
-                            <field name="date_order"/>
-                            <field name="amount_total"/>
-                            <field name="state"/>
+                    <field name="search_text" placeholder="Search by Order or Customer"/>
+                    <button name="action_search" type="object" string="Search" class="btn-secondary"/>
+                </group>
+                <group>
+                    <field name="line_ids">
+                        <tree create="0" edit="1" delete="0" default_order="date_order desc">
+                            <field name="selected" widget="boolean_toggle" options="{'clickable': True}"/>
+                            <field name="sale_order_id" readonly="1" options="{'no_open': True}"/>
+                            <field name="partner_id" readonly="1"/>
+                            <field name="date_order" readonly="1"/>
+                            <field name="amount_total" readonly="1"/>
+                            <field name="state" readonly="1"/>
+                        </tree>
+                        <form string="Sales Order" create="0" edit="0" delete="0">
+                            <group>
+                                <field name="sale_order_id" readonly="1"/>
+                            </group>
+                            <group string="Sales Order Lines">
+                                <field name="sale_order_line_ids">
+                                    <tree create="0" edit="0" delete="0">
+                                        <field name="product_id"/>
+                                        <field name="product_uom_qty"/>
+                                        <field name="product_uom"/>
+                                        <field name="price_subtotal"/>
+                                    </tree>
+                                </field>
+                            </group>
+                        </form>
+                    </field>
+                </group>
+                <group string="Selected Products" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
+                    <field name="product_line_ids">
+                        <tree create="0" edit="0" delete="0">
+                            <field name="product_id"/>
+                            <field name="qty"/>
+                            <field name="product_uom_id"/>
                         </tree>
                     </field>
                 </group>
                 <footer>
                     <button name="action_select_all" type="object" string="Select All" class="btn-secondary"/>
+                    <button name="action_deselect_all" type="object" string="Deselect All" class="btn-secondary"/>
                     <button name="action_apply" type="object" string="Load Sales Orders" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary" special="cancel"/>
                 </footer>
