--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -177,8 +177,9 @@
                 </group>
                 <group>
                     <field name="line_ids">
-                        <tree create="0" edit="1" delete="0" editable="top" default_order="date_order desc">
-                            <field name="selected" widget="boolean_toggle" options="{'clickable': True}"/>
+                        <tree create="0" edit="0" delete="0" default_order="date_order desc">
+                            <button name="action_toggle_selected" type="object" string="Toggle"/>
+                            <field name="selected"/>
                             <field name="sale_order_id" readonly="1" options="{'no_open': True}"/>
                             <field name="partner_id" readonly="1"/>
                             <field name="date_order" readonly="1"/>
