--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -178,8 +178,9 @@
                 <group>
                     <field name="line_ids">
                         <tree create="0" edit="0" delete="0" default_order="date_order desc">
-                            <button name="action_toggle_selected" type="object" string="Toggle"/>
-                            <field name="selected"/>
+                            <button name="action_select" type="object" string="Select" class="btn-secondary"/>
+                            <button name="action_deselect" type="object" string="Deselect" class="btn-secondary"/>
+                            <field name="selection_state" widget="badge"/>
                             <field name="sale_order_id" readonly="1" options="{'no_open': True}"/>
                             <field name="partner_id" readonly="1"/>
                             <field name="date_order" readonly="1"/>
@@ -196,7 +197,6 @@
                                         <field name="product_id"/>
                                         <field name="product_uom_qty"/>
                                         <field name="product_uom"/>
-                                        <field name="price_subtotal"/>
                                     </tree>
                                 </field>
                             </group>
