--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -180,7 +180,9 @@
                         <tree create="0" edit="0" delete="0" default_order="date_order desc">
                             <button name="action_select" type="object" string="Select" class="btn-secondary"/>
                             <button name="action_deselect" type="object" string="Deselect" class="btn-secondary"/>
-                            <field name="selection_state" widget="badge"/>
+                            <field name="selection_state" widget="badge" class="fp_selection_status"
+                                   decoration-success="selection_state == 'selected'"
+                                   decoration-danger="selection_state == 'not_selected'"/>
                             <field name="sale_order_id" readonly="1" options="{'no_open': True}"/>
                             <field name="partner_id" readonly="1"/>
                             <field name="date_order" readonly="1"/>
