--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -20,6 +20,11 @@
                     <field name="status" widget="statusbar" statusbar_visible="draft,calculated,confirmed,done"/>
                     <button name="action_open_select_sales_orders" type="object" string="Select Sales Orders"
                             class="btn-primary" modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
+                    <button name="action_analyze_shortage" type="object" string="Analyze Shortage"
+                            class="btn-secondary" modifiers="{'invisible': [('status', 'not in', ['draft', 'calculated'])]}"/>
+                    <button name="action_create_suggested_mo" type="object" string="Create Suggested MOs"
+                            class="btn-secondary"
+                            modifiers="{'invisible': ['|', ('shortage_count', '=', 0), ('status', 'not in', ['draft', 'calculated'])]}"/>
                     <button name="action_calculate" type="object" string="Calculate"
                             modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
                     <button name="action_create_mo" type="object" string="Create MO (Planner)"
@@ -82,6 +87,41 @@
                                     <field name="message"/>
                                     <field name="mrp_production_id"/>
                                 </tree>
+                            </field>
+                        </page>
+                        <page string="Shortage">
+                            <field name="shortage_line_ids">
+                                <tree create="0" edit="0" delete="0"
+                                      decoration-danger="shortage_qty &gt; 0"
+                                      decoration-success="shortage_qty &lt;= 0">
+                                    <field name="product_id"/>
+                                    <field name="demand_qty"/>
+                                    <field name="available_qty"/>
+                                    <field name="shortage_qty"/>
+                                    <field name="uom_id"/>
+                                    <field name="source_type"/>
+                                </tree>
+                                <form string="Shortage">
+                                    <group>
+                                        <field name="product_id" readonly="1"/>
+                                        <field name="uom_id" readonly="1"/>
+                                        <field name="demand_qty" readonly="1"/>
+                                        <field name="available_qty" readonly="1"/>
+                                        <field name="shortage_qty" readonly="1"/>
+                                        <field name="source_type" readonly="1"/>
+                                    </group>
+                                    <group string="Related Sales Order Lines">
+                                        <field name="related_line_ids">
+                                            <tree create="0" edit="0" delete="0">
+                                                <field name="order_id"/>
+                                                <field name="product_id"/>
+                                                <field name="product_uom_qty"/>
+                                                <field name="product_uom"/>
+                                                <field name="price_subtotal"/>
+                                            </tree>
+                                        </field>
+                                    </group>
+                                </form>
                             </field>
                         </page>
                         <page string="Workflow overview">
