--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -27,7 +27,7 @@
                             modifiers="{'invisible': ['|', ('shortage_count', '=', 0), ('status', 'not in', ['draft', 'calculated'])]}"/>
                     <button name="action_undo_created_mo" type="object" string="Undo Created MOs"
                             class="btn-secondary"
-                            modifiers="{'invisible': [('mrp_production_ids', '=', False)]}"/>
+                            modifiers="{'invisible': [('has_mo', '=', False)]}"/>
                     <button name="action_calculate" type="object" string="Calculate"
                             modifiers="{'invisible': [('status', '!=', 'draft')]}"/>
                     <button name="action_create_mo" type="object" string="Create MO (Planner)"
@@ -105,6 +105,8 @@
                             <group>
                                 <field name="shortage_last_run" readonly="1"/>
                                 <field name="shortage_last_run_by" readonly="1"/>
+                                <field name="suggested_mo_created_at" readonly="1"/>
+                                <field name="suggested_mo_created_by" readonly="1"/>
                             </group>
                             <field name="shortage_line_ids">
                                 <tree create="0" edit="0" delete="0"
@@ -170,7 +172,7 @@
                                         <field name="name"/>
                                         <field name="product_id"/>
                                         <field name="product_qty"/>
-                                        <field name="origin"/>
+                                        <field name="origin" string="Origin"/>
                                         <field name="date_start"/>
                                         <field name="state"/>
                                     </tree>
