--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -34,6 +34,7 @@
                             modifiers="{'invisible': [('status', '!=', 'calculated')]}"/>
                 </header>
                 <sheet>
+                    <field name="has_mo" invisible="1"/>
                     <group>
                         <field name="name"/>
                         <field name="date"/>
@@ -105,8 +106,6 @@
                             <group>
                                 <field name="shortage_last_run" readonly="1"/>
                                 <field name="shortage_last_run_by" readonly="1"/>
-                                <field name="suggested_mo_created_at" readonly="1"/>
-                                <field name="suggested_mo_created_by" readonly="1"/>
                             </group>
                             <field name="shortage_line_ids">
                                 <tree create="0" edit="0" delete="0"
@@ -141,6 +140,35 @@
                                     </group>
                                 </form>
                             </field>
+                        </page>
+                        <page string="Manufacture">
+                            <group>
+                                <field name="suggested_mo_created_at" readonly="1"/>
+                                <field name="suggested_mo_created_by" readonly="1"/>
+                            </group>
+                            <group>
+                                <field name="mrp_production_ids" readonly="1">
+                                    <tree create="0" edit="0" delete="0" default_order="date_start desc">
+                                        <field name="name"/>
+                                        <field name="product_id"/>
+                                        <field name="product_qty"/>
+                                        <field name="origin" string="Origin"/>
+                                        <field name="date_start"/>
+                                        <field name="state"/>
+                                    </tree>
+                                </field>
+                            </group>
+                            <group>
+                                <field name="mo_line_ids" readonly="1">
+                                    <tree create="0" edit="0" delete="0">
+                                        <field name="raw_material_production_id"/>
+                                        <field name="product_id"/>
+                                        <field name="product_uom_qty"/>
+                                        <field name="product_uom"/>
+                                        <field name="state"/>
+                                    </tree>
+                                </field>
+                            </group>
                         </page>
                         <page string="Workflow overview">
                             <group>
