--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -433,14 +433,13 @@
         <field name="name">planning.batch.select.so.form</field>
         <field name="model">planning.batch.select.so</field>
         <field name="arch" type="xml">
-            <form string="Select Sales Orders" class="fp_select_so">
+            <form string="Select Sales Orders" class="fp_select_so o_form_nosheet">
                 <group class="fp_select_so_search">
                     <field name="search_text" placeholder="Search by Order or Customer"/>
                     <button name="action_search" type="object" string="Search" class="btn-secondary"/>
                 </group>
                 <group class="fp_select_section">
-                    <div class="fp_section_title fp_section_title--center">Sales Orders</div>
-                    <field name="line_ids">
+                    <field name="line_ids" nolabel="1">
                         <tree create="0" edit="0" delete="0" default_order="date_order desc">
                             <button name="action_select" type="object" string="Select" class="btn-secondary"/>
                             <button name="action_deselect" type="object" string="Deselect" class="btn-secondary"/>
@@ -470,8 +469,7 @@
                     </field>
                 </group>
                 <group class="fp_select_section fp_select_section--included" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
-                    <div class="fp_section_title fp_section_title--center">Included Products</div>
-                    <field name="product_line_ids">
+                    <field name="product_line_ids" nolabel="1">
                         <tree create="0" edit="0" delete="0">
                             <field name="product_id"/>
                             <field name="qty"/>
