--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -434,11 +434,11 @@
         <field name="model">planning.batch.select.so</field>
         <field name="arch" type="xml">
             <form string="Select Sales Orders" class="fp_select_so o_form_nosheet">
-                <group class="fp_select_so_search">
+                <group class="fp_select_so_search" col="1">
                     <field name="search_text" placeholder="Search by Order or Customer"/>
                     <button name="action_search" type="object" string="Search" class="btn-secondary"/>
                 </group>
-                <group class="fp_select_section">
+                <group class="fp_select_section" col="1">
                     <field name="line_ids" nolabel="1">
                         <tree create="0" edit="0" delete="0" default_order="date_order desc">
                             <button name="action_select" type="object" string="Select" class="btn-secondary"/>
@@ -468,7 +468,7 @@
                         </form>
                     </field>
                 </group>
-                <group class="fp_select_section fp_select_section--included" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
+                <group class="fp_select_section fp_select_section--included" col="1" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
                     <field name="product_line_ids" nolabel="1">
                         <tree create="0" edit="0" delete="0">
                             <field name="product_id"/>
