--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -219,34 +219,56 @@
                         </page>
                         <page string="Selection">
                             <group>
-                                <field name="batch_order_ids" options="{'no_create': True}">
-                                    <tree create="0" edit="0" delete="1">
-                                        <field name="sale_order_id"/>
-                                        <field name="partner_id"/>
-                                        <field name="date_order"/>
-                                        <field name="state"/>
-                                        <field name="amount_total"/>
-                                    </tree>
-                                    <form string="Sales Order">
-                                        <group>
-                                            <field name="sale_order_id" readonly="1"/>
-                                            <field name="partner_id" readonly="1"/>
-                                            <field name="date_order" readonly="1"/>
-                                            <field name="state" readonly="1"/>
-                                            <field name="amount_total" readonly="1"/>
+                                <field name="select_so_wizard_id" context="{'fp_embedded': True}" nolabel="1">
+                                    <form string="Select Sales Orders" class="fp_select_so o_form_nosheet">
+                                        <group class="fp_select_so_search" col="1">
+                                            <field name="search_text" placeholder="Search by Order or Customer"/>
+                                            <button name="action_search" type="object" string="Search" class="btn-secondary"/>
                                         </group>
-                                        <group>
-                                            <field name="batch_line_ids">
-                                                <tree create="0" edit="0" delete="1">
-                                                    <field name="selected"/>
+                                        <group class="fp_select_section" col="1">
+                                            <field name="line_ids" nolabel="1">
+                                                <tree create="0" edit="0" delete="0" default_order="date_order desc">
+                                                    <button name="action_select" type="object" string="Select" class="btn-secondary"/>
+                                                    <button name="action_deselect" type="object" string="Deselect" class="btn-secondary"/>
+                                                    <field name="selection_state" widget="badge" class="fp_selection_status"
+                                                           decoration-success="selection_state == 'selected'"
+                                                           decoration-danger="selection_state == 'not_selected'"/>
+                                                    <field name="sale_order_id" readonly="1" options="{'no_open': True}"/>
+                                                    <field name="partner_id" readonly="1"/>
+                                                    <field name="date_order" readonly="1"/>
+                                                    <field name="amount_total" readonly="1"/>
+                                                    <field name="state" readonly="1"/>
+                                                </tree>
+                                                <form string="Sales Order" create="0" edit="0" delete="0">
+                                                    <group>
+                                                        <field name="sale_order_id" readonly="1"/>
+                                                    </group>
+                                                    <group string="Sales Order Lines">
+                                                        <field name="sale_order_line_ids">
+                                                            <tree create="0" edit="0" delete="0">
+                                                                <field name="product_id"/>
+                                                                <field name="product_uom_qty"/>
+                                                                <field name="product_uom"/>
+                                                            </tree>
+                                                        </field>
+                                                    </group>
+                                                </form>
+                                            </field>
+                                        </group>
+                                        <group class="fp_select_section fp_select_section--included" col="1" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
+                                            <field name="product_line_ids" nolabel="1">
+                                                <tree create="0" edit="0" delete="0">
                                                     <field name="product_id"/>
-                                                    <field name="product_uom_qty"/>
-                                                    <field name="product_uom"/>
-                                                    <field name="status"/>
-                                                    <field name="message"/>
+                                                    <field name="qty"/>
+                                                    <field name="product_uom_id"/>
                                                 </tree>
                                             </field>
                                         </group>
+                                        <footer>
+                                            <button name="action_select_all" type="object" string="Select All" class="btn-secondary"/>
+                                            <button name="action_deselect_all" type="object" string="Deselect All" class="btn-secondary"/>
+                                            <button name="action_apply" type="object" string="Load Sales Orders" class="btn-primary"/>
+                                        </footer>
                                     </form>
                                 </field>
                             </group>
