--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -433,7 +433,7 @@
         <field name="name">planning.batch.select.so.form</field>
         <field name="model">planning.batch.select.so</field>
         <field name="arch" type="xml">
-            <form string="Select Sales Orders" class="fp_select_so o_form_nosheet">
+            <form string="Select Sales Orders" class="fp_select_so">
                 <group class="fp_select_so_search" col="1">
                     <field name="search_text" placeholder="Search by Order or Customer"/>
                     <button name="action_search" type="object" string="Search" class="btn-secondary"/>
@@ -481,7 +481,7 @@
                     <button name="action_select_all" type="object" string="Select All" class="btn-secondary"/>
                     <button name="action_deselect_all" type="object" string="Deselect All" class="btn-secondary"/>
                     <button name="action_apply" type="object" string="Load Sales Orders" class="btn-primary"/>
-                    <button string="Cancel" class="btn-secondary" special="cancel"/>
+                    <button name="action_back_to_batch" type="object" string="Back to Batch" class="btn-secondary"/>
                 </footer>
             </form>
         </field>
