--- a/views/planning_batch_views.xml
+++ b/views/planning_batch_views.xml
@@ -434,13 +434,12 @@
         <field name="model">planning.batch.select.so</field>
         <field name="arch" type="xml">
             <form string="Select Sales Orders" class="fp_select_so">
-                <group class="fp_select_so_search">
+                <group class="fp_select_so_search" col="1">
                     <field name="search_text" placeholder="Search by Order or Customer"/>
                     <button name="action_search" type="object" string="Search" class="btn-secondary"/>
                 </group>
-                <group class="fp_select_section">
-                    <div class="fp_section_title fp_section_title--center">Sales Orders</div>
-                    <field name="line_ids">
+                <group class="fp_select_section" col="1">
+                    <field name="line_ids" nolabel="1" string="">
                         <tree create="0" edit="0" delete="0" default_order="date_order desc">
                             <button name="action_select" type="object" string="Select" class="btn-secondary"/>
                             <button name="action_deselect" type="object" string="Deselect" class="btn-secondary"/>
@@ -469,9 +468,8 @@
                         </form>
                     </field>
                 </group>
-                <group class="fp_select_section fp_select_section--included" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
-                    <div class="fp_section_title fp_section_title--center">Included Products</div>
-                    <field name="product_line_ids">
+                <group class="fp_select_section fp_select_section--included" col="1" modifiers="{'invisible': [('has_product_summary', '=', False)]}">
+                    <field name="product_line_ids" nolabel="1" string="">
                         <tree create="0" edit="0" delete="0">
                             <field name="product_id"/>
                             <field name="qty"/>
